Impletacion de api /product/balance/{customerId}
