# api-inviertepe-bank/src/main/java/com/inviertepe/delegate/impl/ProductApiDelegateImpl.java
@@ -6,7 +6,6 @@ import java.util.ArrayList;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
@@ -15,11 +14,10 @@ import org.springframework.web.server.ServerWebExchange;
 import com.inviertepe.document.BankAccount;
 import com.inviertepe.document.Customer;
 import com.inviertepe.mapper.ICreditCardMapper;
+import com.inviertepe.mapper.ICustomerMapper;
 import com.inviertepe.mapper.ILoanMapper;
-import com.inviertepe.server.api.ApiUtil;
-import com.inviertepe.server.api.ProductApi;
 import com.inviertepe.server.api.ProductApiDelegate;
-import com.inviertepe.server.dto.Balance;
+import com.inviertepe.server.dto.BalanceResponse;
 import com.inviertepe.server.dto.BankAccountRequest;
 import com.inviertepe.server.dto.BankAccountResponse;
 import com.inviertepe.server.dto.BankAccountResponse.TypeBankAccountEnum;
@@ -29,6 +27,7 @@ import com.inviertepe.server.dto.LoanRequest;
 import com.inviertepe.server.dto.LoanResponse;
 import com.inviertepe.service.IBankAccountService;
 import com.inviertepe.service.ICreditCardService;
+import com.inviertepe.service.ICustomerService;
 import com.inviertepe.service.ILoanService;
 
 import reactor.core.publisher.Mono;
@@ -44,11 +43,15 @@ public class ProductApiDelegateImpl implements ProductApiDelegate {
 	private ICreditCardService creditCardService;
 	@Autowired
 	private ILoanService loanService;
+	@Autowired
+	private ICustomerService customerService;
 	
 	@Autowired
 	private ICreditCardMapper creditCardMapper;
 	@Autowired
 	private ILoanMapper loanMapper;
+	@Autowired
+	private ICustomerMapper customerMapper;
 
 	@Override
 	public Mono<ResponseEntity<BankAccountResponse>> addBankAccount(Mono<BankAccountRequest> bankAccountRequest,
@@ -106,16 +109,6 @@ public class ProductApiDelegateImpl implements ProductApiDelegate {
 
     }
 	
-    /**
-     * POST /product/loan : Add a new loan to the customer
-     * Add a new loan to the customer
-     *
-     * @param loanRequest Create a new loan to the customer (required)
-     * @return Successful operation (status code 200)
-     *         or Invalid input (status code 400)
-     *         or Validation exception (status code 422)
-     * @see ProductApi#addLoan
-     */
 	@Override
 	public Mono<ResponseEntity<LoanResponse>> addLoan(Mono<LoanRequest> loanRequest,
         ServerWebExchange exchange) {
@@ -133,19 +126,19 @@ public class ProductApiDelegateImpl implements ProductApiDelegate {
 				});
     }
 
-        /**
-         * GET /product/balance/{customerId} : Find for available balances of the customer&#39;s products.
-         * Returns product balances
-         *
-         * @param customerId Id of customer to return (required)
-         * @return successful operation (status code 200)
-         *         or Invalid ID supplied (status code 400)
-         *         or Customer not found (status code 404)
-         * @see ProductApi#getProdutsById
-         */
-		@Override
-        public Mono<ResponseEntity<Balance>> getProdutsById(Long customerId,
-            ServerWebExchange exchange) {
-return null;
-        }
+	@Override
+    public Mono<ResponseEntity<BalanceResponse>> getProdutsById(String customerId,
+        ServerWebExchange exchange) {
+		
+        return customerService.findById(customerId)
+        		.map(data -> {
+        			var response = customerMapper.toBalanceResponse(data);
+        			return ResponseEntity
+        					.ok()
+							.contentType(MediaType.APPLICATION_JSON)
+							.body(response);
+        		})
+        		.defaultIfEmpty(ResponseEntity.notFound().build());
+
+    }
 }
